@@ -1,15 +1,29 @@
 # PROJECT 3
 
 
+## Checkers
+**Author**: Rafał Jasiński\
+**Description**: An app for "Checkers" - a board game vs AI.\
+**Future features**:
 
-## Informational details of the task 
+## How to play
+**What you need**:
+- Java IDE for example Intellij IDEA
+- javaFX 18 SDK
 
-There is parser.py programm which was used to check corectness of reading and sorting data
+**What to do**:
+- set up your IDE so it can run main.java 
+- File -> Project Structure -> Libraries -> add path to javaFX _lib_ directory
+- set up your run/debug configuration 
+- Run -> Edit Configurations -> Click '+'  -> Add Application -> Modify options -> Add VM options
+  and paste this to VM options: 
+- _--module-path /path/to/SDK/lib --add-modules javafx.controls,javafx.fxml_
 
-- Deadline for the commissioning of the task : 16/05/2022
-- A task that will be implemented  - task for assessment: 5.0
+### Informational details of the task
+- Deadline for the commissioning of the task : 13/06/2022
+- A task that will be implemented  - task for assessment: 5.0 - checkers with GUI
 - Final assessment of the task  - [NaN]
 
 [PDF with report of the task ](https://gitlab.com/JasinskiR259384/pamsi-2022/-/blob/main/PROJECT_2/Report_PAMSI_2.pdf)
 
-[PDF with a list of tasks ](https://gitlab.com/JasinskiR259384/pamsi-2022/-/blob/main/PROJECT_2/proj2.pdf)
+[PDF with a list of tasks ](https://gitlab.com/JasinskiR259384/pamsi-2022/-/blob/dev1.0/PROJECT_3/proj3.pdf)
